--- a/index.html
+++ b/index.html
@@ -1,1 +1,127 @@
-..
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Portfólio | Nicole Belim</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      background: #d8ecf3; /* azul bebê */
+      color: #2b4c6f;       /* azul mais escuro */
+    }
+
+    header {
+      text-align: center;
+      padding: 3rem 1rem 1rem;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .section {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem 1rem;
+    }
+
+    h2 {
+      color: #1e3a5f;
+      border-bottom: 2px solid #a3c9e2;
+      display: inline-block;
+      margin-bottom: 1rem;
+    }
+
+    .projects {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 1.5rem;
+    }
+
+    .project {
+      background: #ffffff;
+      padding: 1rem;
+      border-radius: 8px;
+      border: 1px solid #b3d5e7;
+    }
+
+    .project a {
+      color: #2b4c6f;
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      font-size: 0.9rem;
+      background: #c9e2f0;
+      color: #1e3a5f;
+    }
+
+    .contact-info p {
+      margin: 0.3rem 0;
+    }
+
+    a {
+      color: #1e3a5f;
+    }
+
+    @media(min-width: 600px) {
+      .projects {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Nicole Belim</h1>
+    <p>Estudante apaixonada por criatividade e design</p>
+  </header>
+
+  <section class="section">
+    <h2>Sobre mim</h2>
+    <p>
+      Olá! Me chamo Nicole Belim, tenho 16 anos e estudo no Colégio Dom Pedro II.  
+      Sou uma estudante curiosa, criativa e apaixonada por design, arte digital e comunicação visual.  
+      Estou começando minha jornada no mundo do design e já me encanto em transformar ideias em imagens que contam histórias.  
+      Gosto de explorar estilos diferentes e aprender com cada projeto. Este portfólio é uma amostra do que tenho construído com dedicação.
+    </p>
+  </section>
+
+  <section class="section">
+    <h2>Meus Projetos</h2>
+    <div class="projects">
+      <div class="project">
+        <h3>Logotipo Criativo</h3>
+        <p>Criação de logotipo para marca fictícia com foco em estética leve, moderna e jovial.</p>
+        <a href="#">Ver projeto</a>
+      </div>
+      <div class="project">
+        <h3>Painéis para Redes Sociais</h3>
+        <p>Design de painéis para Instagram, voltados para estética clean e minimalista.</p>
+        <a href="#">Ver projeto</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>Contato</h2>
+    <div class="contact-info">
+      <p>Email: <a href="mailto:nicole.belim@email.com">nicole.belim@email.com</a></p>
+      <p>Instagram: <a href="https://instagram.com/seuuser" target="_blank">@seuuser</a></p>
+      <p>Behance: <a href="https://www.behance.net/seuuser" target="_blank">behance.net/seuuser</a></p>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 Nicole Belim. Todos os direitos reservados.
+  </footer>
+
+</body>
+</html>
