--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     <h2>Contato</h2>
     <div class="contact-info">
       <p>Email: <a href="mailto:nicole.belim@email.com">nicole.belim@email.com</a></p>
-      <p>Instagram: <a href="https://instagram.com/seuuser" target="_blank">@seuuser</a></p>
-      <p>Behance: <a href="https://www.behance.net/seuuser" target="_blank">behance.net/seuuser</a></p>
+      <p>Instagram: <a href="https://instagram.com/seuuser" target="_blank">@nicole.belim</a></p>
+      <p>Behance: <a href="https://www.behance.net/seuuser" target="_blank">behance.net/nicole.belim</a></p>
     </div>
   </section>
 
